# edit-img

./: .flake8  .gitignore  .windsurfrules  README-CLI.md  README.bk  README.md  check_format.py  japanese_font_utils.py  pyproject.toml  report.html  resize_core.py  resize_images.py  resize_images_gui.bk  resize_images_gui.py  ui_simulation_v2.html  windows_jp_test.py
docs/: TkEasyGUI.md  gui_development_plan.md  gui_image_processing_implementation_improved.md  機能拡張Squoosh.md
