[project]
name = "edit-img"
version = "0.2.1"
description = "日本語対応の画像リサイズ・圧縮ツール（GUI対応版・Windows長パス対応）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pillow>=9.0.0",
    "tqdm>=4.60.0",
    "TkEasyGUI==0.2.80",
]

[project.scripts]
edit-img-cli = "resize_images:main"
edit-img-gui = "resize_images_gui:main"
