[project]
name = "edit-img"
version = "0.2.1"
description = "日本語対応の画像リサイズ・圧縮ツール（GUI対応版・Windows長パス対応）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3,<0.8.0", # メジャーバージョン内での最新を使用
    "pillow>=9.0.0", # PILは比較的安定しているのでメジャーバージョンのみ指定
    "tqdm>=4.60.0,<5.0.0", # メジャーバージョン内での最新を使用
    "TkEasyGUI>=0.2.20,<0.3.0", # 小文字表記に修正し、バージョン範囲を指定
    "emoji>=2.0.0,<3.0.0", # 絵文字処理用パッケージ
]

[project.scripts]
edit-img-cli = "resize_images:main"
edit-img-gui = "resize_images_gui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["resize_core", "resize_images", "resize_images_gui"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]
