[project]
name = "edit-img"
version = "0.2.1"
description = "日本語対応の画像リサイズ・圧縮ツール（GUI対応版・Windows長パス対応）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3,<0.8.0",
    "pillow>=9.0.0",
    "tqdm>=4.60.0,<5.0.0",
    "TkEasyGUI>=0.2.20,<0.3.0",
    "emoji>=2.0.0,<3.0.0",
    "customtkinter>=5.2.2",
    "flake8>=7.2.0",
    "pytest>=8.3.5",
    "black>=25.1.0",
]

[project.scripts]
edit-img-cli = "resize_images:main"
edit-img-gui = "resize_images_gui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["resize_core", "resize_images", "resize_images_gui"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
